# nomad-schema-plugin-simulation-workflow

./: pyproject.toml
.github/workflows/: actions.yaml
simulationworkflowschema/: __init__.py  general.py  molecular_dynamics.py
tests/: conftest.py
tests/data/: radius_of_gyration.archive.json  rdf_2.archive.json
